Menu: fix spacing and alignment of link boxes
Ticket: none

--- a/pub/System/FlatSkinPlugin/src/scss/qwiki/_leftbar.scss
+++ b/pub/System/FlatSkinPlugin/src/scss/qwiki/_leftbar.scss
@@ -165,12 +165,9 @@
 
     > .links {
       top: 50px;
-      padding-left: rem-calc(10);
-      padding-right: rem-calc(10);
 
       > .button {
-        width: calc(100% - #{4 * rem-calc(10)});
-        margin-bottom: rem-calc(3);
+        margin: 0 rem-calc(8) rem-calc(3) rem-calc(8);
         cursor: pointer;
         border-radius: $global-radius;
         color: $qw-leftbar-color-expanded;
